[FIX] 기존 검색이 제대로 되지 않던 부분 수정